@@ -1,3 +1,10 @@
+2006-11-14  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/structure.generators.R 
+	(graph.extended.chordal.ring) : added
+	* interfaces/R/src/rinterface.c (R_igraph_extended_chordal_ring) :
+	added
+
 2006-11-09  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/src/rinterface.c (R_igraph_spinglass_my_community) :
